@@ -127,6 +127,7 @@
         <xs:enumeration value="SteamCloud"/>
         <xs:enumeration value="ScummVM"/>
         <xs:enumeration value="Flash"/>
+        <xs:enumeration value="RenPy"/>
       </xs:restriction>
     </xs:simpleType>
   </xs:attribute>
