@@ -1,5 +1,8 @@
 New Windows Games:
-*
+* Crusader Kings II
+* Katawa Shoujo
+Updated Windows Games:
+* The Witcher 2 - Added Steamcloud info
 =2012/7/11=
 New Windows Games:
 * Aliens vs. Predator Classic
